--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.datasource.driver-class-name = org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto = validate
 
 spring.jpa.properties.hibernate.search.default.directory_provider = filesystem
+
+spring.http.multipart.enabled = true
+spring.http.multipart.max-file-size = 30MB
+spring.http.multipart.max-request-size = 33MB
