Configure jOOQ dialect

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@
 
 spring.datasource.platform = postgresql
 spring.datasource.driver-class-name = org.postgresql.Driver
+spring.jooq.sql-dialect = Postgres
 
 spring.jpa.hibernate.ddl-auto = validate
 
