Use db connection from maven during dev

--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -12,8 +12,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-spring.datasource.url = jdbc:postgresql://localhost:5432/tweetArchive
-spring.datasource.username = tweetArchive
-spring.datasource.password = tweetArchive
+spring.datasource.url = @db.url@
+spring.datasource.username = @db.username@
+spring.datasource.password = @db.password@
 
 spring.jpa.properties.hibernate.search.default.indexBase = ${user.dir}/var/index/default
