--- a/pom.xml
+++ b/pom.xml
@@ -361,7 +361,7 @@
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
                 <includes>
-                    <include>application.properties</include>
+                    <include>application*.properties</include>
                 </includes>
             </resource>
         </resources>
